Rework DbManager.java and commands classes