@@ -8,17 +8,25 @@ import com.projprogiii.servermail.ServerApp;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FetchEmail implements Command{
 
     @Override
     public ServerResponse handle(ClientRequest req){
-        Date date = (Date)req.args().get(0);
+        Date date = (Date) req.args().get(0);
 
-        List<Email> list = ServerApp.model.getDbManager().readEmails(req.auth()).stream()
+        //read lock
+        List<Email> emails = ServerApp.model.getDbManager()
+                .retrieveEmails(req.auth()).stream()
                 .filter(email -> email.getDate().compareTo(date) > 0)
-                .collect(Collectors.toList());
-        return new ServerResponse(ServerResponseName.SUCCESS, list);
+                .toList();
+        System.out.println(emails);
+        //unlock
+
+        ServerResponseName name = (emails == null) ?
+                ServerResponseName.ILLEGAL_PARAMS :
+                ServerResponseName.SUCCESS;
+
+        return new ServerResponse(name, emails);
     }
 }
